change: Various little fixes

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ title: About
   <p>
     Contact: <a href="mailto:mail@gosha.net">mail@gosha.net</a><br/>
     Commissions: <a href="mailto:us@possible.space">us@possible.space</a><br/>
-    Follow: <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://github.com/goshatch">GitHub</a>, <a href="https://read.cv/gosha">CV</a>.
+    Follow: <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a href="https://github.com/goshatch">GitHub</a>, <a href="https://read.cv/gosha">CV</a>.
   </p>
 </section>
 <section>
