--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 <section>
   <header class="home-header">
     <p>Hello! I'm <a href="/about">Gosha Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
-    <p>You can find me on <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, and <a href="https://merveilles.town/@gosha">Mastodon</a>.</p>
+    <p>You can also find me on <a href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://twitter.com/goshatch">Twitter</a>, and <a href="https://instagram.com/gosha.tch">Instagram</a>.</p>
   </header>
 </section>
 <div class="home-photos">
