--- a/colophon.html
+++ b/colophon.html
@@ -8,20 +8,24 @@ title: Colophon
 </header>
 
 <section>
-  <p>Design, programming, photography by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
-  <p>This website is hosted on <a href="https://render.com/">Render</a>, and was built on and using free and open source technologies. We all stand on the shoulders of giants.</p>
+  <p><code>gosha.net</code> is designed, written, and produced by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, with illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
+  <p>It is typeset in <a href="https://github.com/IBM/plex">IBM Plex Sans</a> and <a href="https://berkeleygraphics.com/typefaces/berkeley-mono/">Berkeley Mono</a>, and hosted on <a href="https://render.com/">Render</a>.</p>
+  <p>Essential tools used in production include:</p>
   <ul>
-    <li>Typeset in <a href="https://github.com/IBM/plex">IBM Plex</a> Sans and Mono</li>
-    <li>Site generator: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
-    <li>Text editor: <a href="https://www.gnu.org/software/emacs/">Emacs</a> (<a href="https://github.com/hlissner/doom-emacs">Doom Emacs</a>)</li>
+    <li>HTML generation: <a href="https://www.jekyllrb.com/">Jekyll 4.0</a>, with <a href="https://github.com/jekyll/jekyll-feed">jekyll-feed</a> and <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
+    <li>Code editing, writing, task management, general purpose operating system: <a href="https://www.gnu.org/software/emacs/">Emacs</a></li>
     <li>Version control: <a href="https://git-scm.com/">Git</a> via <a href="https://magit.vc">Magit</a></li>
-    <li>Icons: <a href="https://github.com/twitter/twemoji">Twemoji</a> from Twitter (via <a href="https://github.com/SebastianAigner/twemoji-amazing">twemoji-amazing</a>), RSS icon adapted from <a href="http://www.feedicons.com/">FeedIcons</a></li>
   </ul>
+  <p>The site uses icons from <a href="https://github.com/twitter/twemoji">Twemoji</a> by Twitter, via <a href="https://github.com/SebastianAigner/twemoji-amazing">twemoji-amazing</a>, and an RSS feed icon adapted from <a href="http://www.feedicons.com/">FeedIcons</a>.</p>
 </section>
 
-<hr/>
+<section>
+  <h3>Privacy statement</h3>
+  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/newsletter">newsletter</a>.
+</section>
 
 <section>
+  <h3>Build information</h3>
   <p>
     Last updated on {{ site.data.git.date | readableDate }}<br/>
     <code><a href="https://github.com/goshatch/gosha.net/commit/{{ site.data.git.commitHash }}">{{ site.data.git.commitHash }}</a></code>
