new: Nine months of parenting blog post

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: base
     <p>You can also find me on <a href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://twitter.com/goshatch">Twitter</a>, and <a href="https://instagram.com/gosha.tch">Instagram</a>.</p>
   </header>
 </section>
-<div class="home-photos">
-  <div class="home-photo">
+<div class="full-width-photos">
+  <div class="photo">
     <img src="/assets/images/home_war.jpg" alt="Untitled (London&mdash;Bucha) (2022)" title="Untitled (London&mdash;Bucha) (2022)">
   </div>
 </div>
