change: The privacy update

--- a/_projects/where-the-story-begins.html
+++ b/_projects/where-the-story-begins.html
@@ -16,7 +16,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       210 × 184 mm<br>
       Uncoated paper, printed on HP Indigo digital press<br>
       56 pages, 32 colour photographs<br>
-      Photographs by Ting-yi Lai and Gueorgui Tcherednitchenko<br>
+      Photographs by T.L. and Gosha Tcherednitchenko<br>
       Published by A Possible Space
     </p>
     <p class="cta">
@@ -143,7 +143,7 @@ featured_image: /assets/images/projects/where-the-story-begins/featured.jpg
       210 × 184 mm<br>
       Uncoated paper, printed on HP Indigo digital press<br>
       56 pages, 32 colour photographs<br>
-      Photographs by Ting-yi Lai and Gueorgui Tcherednitchenko<br>
+      Photographs by T.L. and Gosha Tcherednitchenko<br>
       Published by A Possible Space
     </p>
     <p class="cta">
