--- a/about.html
+++ b/about.html
@@ -10,20 +10,19 @@ title: About
 
 <section name="bio">
   <figure class="centered">
-    <img src="/assets/images/illustrations/about.png" alt="Illustration by Tingyi Lai" />
-    <figcaption>Illustration by Tingyi Lai</figcaption>
+    <img src="/assets/images/illustrations/about.png" alt="Illustration by T.L." />
+    <figcaption>Illustration by T.L.</figcaption>
   </figure>
-  <p>Hi! My name is Gosha<sup class="reference" id="reference-bio-1"><a href="#footnote-bio-1">1</a></sup> and I am a Russian-born, French-raised photographer, designer, and programmer living and working in London.</p>
-  <p>I have been online since the mid-1990's, and have been working with the Web ever since then. I studied software engineering at Epitech in Paris in the early 2000s, and more recently photography at the Royal College of Art in London.</p>
+  <p>Hi! My name is Gosha<sup class="reference" id="reference-bio-1"><a href="#footnote-bio-1">1</a></sup> and I am a Russian-born, French-raised photographer, designer, and programmer living and working in London. I have been online since the mid-1990's, and have been working with the Web ever since then.</p>
   <p>This website is intended as an online space for documenting and archiving various <a href="/projects">projects</a> I'm involved with, as well as sharing exploration, research, and experiences accumulated along the way. You can read more about the technical details of the site in the <a href="/colophon">Colophon</a>.
-  <p>For the last few years, I've been running <a href="https://a.possible.space/">A Possible Space</a>, a tiny creative studio I've co-founded with my wife. Before that, among other things, I've been the CTO of product design agency <a href="https://aqworks.com/">AQ</a> in Tokyo, and co-founded the civic tech startup Local Republic.</p>
+  <p>For the last few years, I've been running <a href="https://a.possible.space/">A Possible Space</a>, a tiny creative studio I've co-founded with my partner. Before that, among other things, I've been the CTO of product design agency <a href="https://aqworks.com/">AQ</a> in Tokyo, and co-founded the civic tech startup Local Republic.</p>
   <p>I welcome all kinds of collaborations!</p>
 </section>
 <section name="contact">
   <p>
     Contact: <a href="mailto:mail@gosha.net">mail@gosha.net</a><br/>
     Commissions: <a href="mailto:us@possible.space">us@possible.space</a><br/>
-    Follow: <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://twitter.com/goshatch">Twitter</a>, <a href="https://instagram.com/gosha.tch">Instagram</a>, <a href="https://github.com/goshatch">GitHub</a>, <a href="https://read.cv/gosha">CV</a>.
+    Social: <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a>, <a href="https://github.com/goshatch">GitHub</a>, <a href="https://read.cv/gosha">CV</a>.
   </p>
 </section>
 <section>
@@ -41,7 +40,7 @@ title: About
     <h2>Books</h2>
   </header>
   <ul>
-    <li><a href="/projects/where-the-story-begins">Where The Story Begins</a><br><span class="detail">With Tingyi Lai, published by A Possible Space, 56 pages, 100 copies. (2019)</span></li>
+    <li><a href="/projects/where-the-story-begins">Where The Story Begins</a><br><span class="detail">Published by A Possible Space, 56 pages, 100 copies. (2019)</span></li>
     <li><a href="/projects/the-long-way-home" rel="history">The Long Way Home</a><br><span class="detail">Self-published, 76 pages, 200 copies. (2018)</span></li>
     <li><a href="/projects/turbulence" rel="history">TURBULENCE</a><br><span class="detail">Self-published, 44 pages, 100 copies. Sold out. (2016)</span></li>
   </ul>
