--- a/colophon.html
+++ b/colophon.html
@@ -8,7 +8,7 @@ title: Colophon
 </header>
 
 <section>
-  <p><code>gosha.net</code> is designed, written, and produced by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, with illustrations by <a href="https://www.tingyilai.com">Tingyi Lai</a>.</p>
+  <p><code>gosha.net</code> is designed, written, and produced by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, with illustrations by T.L.</p>
   <p>It is typeset in <a href="https://github.com/IBM/plex">IBM Plex Sans</a> and <a href="https://berkeleygraphics.com/typefaces/berkeley-mono/">Berkeley Mono</a>, and hosted on <a href="https://render.com/">Render</a>.</p>
   <p>Essential tools used in production include:</p>
   <ul>
