feat(a11y): Add Accessibility Statement

--- a/colophon.html
+++ b/colophon.html
@@ -21,7 +21,12 @@ title: Colophon
 
 <section>
   <h3>Privacy statement</h3>
-  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/newsletter">newsletter</a>.
+  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/newsletter">newsletter</a>.</p>
+</section>
+
+<section>
+  <h3>Accessibility</h3>
+  <p>Please see the <a href="/accessibility">Accessibility Statement</a>.</p>
 </section>
 
 <section>
