feat(newsletter): Add newsletter name
Also update main navigation to match.

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,33 +1,33 @@
 ---
 layout: base
-title: Newsletter
-description: Periodic updates
+title: The Long Term
+description: An infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice
 active: newsletter
 ---
 
-<header>
-  <h1>The Infrequent Update</h1>
-</header>
-
-<section>
-  <p>Please leave your email address to receive occasional updates on life, new work, projects, exhibitions, and more. No spam ever, and an instant unsubscribe link in every email!</p>
-  <div class="centered">
-    <form
-      action="https://buttondown.email/api/emails/embed-subscribe/gosha"
-      method="post"
-      target="popupwindow"
-      onsubmit="window.open('https://buttondown.email/gosha', 'popupwindow')"
-      class="embeddable-buttondown-form"
+<section class="double-column">
+  <section class="text col left-col">
+    <h1>The Long Term</h1>
+    <p><em>The Long Term</em> is an infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice.</p>
+    <p>It is currently in the process of getting started.</p>
+    <p>Please leave your email address to receive the first issue when it is ready. No spam ever, and an instant unsubscribe link in every email.</p>
+    <div class="centered">
+      <form
+        action="https://buttondown.email/api/emails/embed-subscribe/gosha"
+        method="post"
+        target="popupwindow"
+        onsubmit="window.open('https://buttondown.email/gosha', 'popupwindow')"
+        class="embeddable-buttondown-form"
       >
-      <input type="email" name="email" id="bd-email" placeholder="you@email.com" />
-      <input type="hidden" value="1" name="embed" />
-      <input type="submit" value="Subscribe" />
-    </form>
-  </div>
-</section>
-
-<section name="photo">
-  <figure class="centered">
-    <img src="/assets/images/newsletter/newsletter.jpg" alt="Hand catching water streaming from a faucet" width="100%">
-  </figure>
+        <input type="email" name="email" id="bd-email" placeholder="you@email.com" />
+        <input type="hidden" value="1" name="embed" />
+        <input type="submit" value="Subscribe" />
+      </form>
+    </div>
+  </section>
+  <section class="col right-col">
+    <figure class="centered">
+      <img src="/assets/images/newsletter/newsletter.jpg" alt="Hand catching water streaming from a faucet" width="100%">
+    </figure>
+  </section>
 </section>
