feat(blog): new post - Back to my name

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ title: About
 <section>
   <div class="footnotes">
     <ol>
-      <li class="footnote" id="footnote-bio-1"><i>Gosha</i> is a <a href="https://en.wikipedia.org/wiki/Diminutive">diminutive</a> form of <i>Gueorgui</i>, which in turn is the Russian equivalent of the English name <i>George</i>.<a class="back" href="#reference-bio-1">↩</a></li>
+      <li class="footnote" id="footnote-bio-1"><i>Gosha</i> is a <a href="https://en.wikipedia.org/wiki/Diminutive">diminutive</a> form of <i>Gueorgui</i>, which in turn is the Russian equivalent of the English name <i>George</i>. <a href="/2023/name">More about my name</a>. <a class="back" href="#reference-bio-1">↩</a></li>
     </ol>
   </div>
 </section>
