feat(meta): Add support on Ko-Fi links

--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@ title: About
   <p>Hi! My name is Gosha<sup class="reference" id="reference-bio-1"><a href="#footnote-bio-1">1</a></sup> and I am a Russian-born, French-raised photographer, designer, and programmer living and working in London. I have been online since the mid-1990's, and have been working with the Web ever since then.</p>
   <p>This website is intended as an online space for documenting and archiving various <a href="/projects">projects</a> I'm involved with, as well as sharing exploration, research, and experiences accumulated along the way. You can read more about the technical details of the site in the <a href="/colophon">Colophon</a>.
   <p>For the last few years, I've been running <a href="https://a.possible.space/">A Possible Space</a>, a tiny creative studio I've co-founded with my partner. Before that, among other things, I've been the CTO of product design agency <a href="https://aqworks.com/">AQ</a> in Tokyo, and co-founded the civic tech startup Local Republic.</p>
-  <p>I welcome all kinds of collaborations!</p>
+  <p>I welcome all kinds of collaborations.</p>
+  <p>If you enjoy my work, please consider <a href="https://ko-fi.com/goshadotnet">supporting it via Ko-Fi</a>. I appreciate it!</p>
 </section>
 <section name="contact">
   <p>
