feat(front): Update photos on front page

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@ layout: base
 </section>
 <div class="full-width-photos">
   <div class="photo">
-    <img src="/assets/images/home_war.jpg" alt="Untitled (London&mdash;Bucha) (2022)" title="Untitled (London&mdash;Bucha) (2022)">
+    <img src="/assets/images/home_ntc_1.jpg" alt="New Taipei City: plastic crates stacked on a street corner (2023)" title="Untitled (New Taipei City) (2023)">
+  </div>
+  <div class="photo">
+    <img src="/assets/images/home_ntc_2.jpg" alt="New Taipei City: a stop/go signal by the entrance to an underground car park near a 7-Eleven store (2023)" title="Untitled (New Taipei City) (2023)">
   </div>
 </div>
 <section>
-  <p>From the <i>London&mdash;Bucha</i> event in front of the embassy of the Russian Federation in London, spring 2022.</p>
+  <p>From a yet-untitled ongoing project documenting family life. New Taipei City, Taiwan, 2023.</p>
 </section>
