feat(newsletter): Update signup link

--- a/newsletter.html
+++ b/newsletter.html
@@ -13,10 +13,10 @@ active: newsletter
     <p>Please leave your email address to receive the first issue when it is ready. No spam ever, and an instant unsubscribe link in every email.</p>
     <div class="centered">
       <form
-        action="https://buttondown.email/api/emails/embed-subscribe/gosha"
+        action="https://buttondown.email/api/emails/embed-subscribe/thelongterm"
         method="post"
         target="popupwindow"
-        onsubmit="window.open('https://buttondown.email/gosha', 'popupwindow')"
+        onsubmit="window.open('https://buttondown.email/thelongterm', 'popupwindow')"
         class="embeddable-buttondown-form"
       >
         <input type="email" name="email" id="bd-email" placeholder="you@email.com" />
