feat(newsletter): change URL

--- a/colophon.html
+++ b/colophon.html
@@ -22,7 +22,7 @@ title: Colophon
 
 <section>
   <h3>Privacy statement</h3>
-  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/newsletter">newsletter</a>.</p>
+  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/the-long-term">newsletter</a>.</p>
 </section>
 
 <section>
