--- a/the-long-term.html
+++ b/the-long-term.html
@@ -9,7 +9,7 @@ active: newsletter
   <section class="text col left-col">
     <h1>The Long Term</h1>
     <p><em>The Long Term</em> is an infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice.</p>
-    <p>It is currently in the process of getting started.</p>
+    <p>The first issue is coming soon.</p>
     <p>Please leave your email address to receive the first issue when it is ready. No spam ever, and an instant unsubscribe link in every email.</p>
     <div class="centered">
       <form
