feat(newsletter): Update newsletter page

--- a/the-long-term.html
+++ b/the-long-term.html
@@ -3,13 +3,15 @@ layout: base
 title: The Long Term
 description: An infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice
 active: newsletter
+featured_image: /assets/images/newsletter/social-image.jpg
 ---
 
 <section class="double-column">
   <section class="text col left-col">
-    <h1>The Long Term</h1>
-    <p><em>The Long Term</em> is an infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice.</p>
-    <p>The first issue is coming soon.</p>
+    <h1 class="logo-title">The Long Term</h1>
+    <p>An infrequent email newsletter on the rewards and challenges of pursuing a long term creative practice.</p>
+    <p>How does making work fit in with the priorities of a busy adult life, when it is not your day gig? How does it fit with having kids? And what does it mean, to make work, anyway? What can we hope to accomplish, and what is enough?</p>
+    <hr/>
     <p>Please leave your email address to receive the first issue when it is ready. No spam ever, and an instant unsubscribe link in every email.</p>
     <div class="centered">
       <form
