--- a/colophon.html
+++ b/colophon.html
@@ -9,7 +9,7 @@ title: Colophon
 
 <section>
   <p><code>gosha.net</code> is designed, written, and produced by <a href="/about" rel="author">Gosha Tcherednitchenko</a>, with illustrations by T.L.</p>
-  <p>It is typeset in <a href="https://github.com/IBM/plex">IBM Plex Sans</a> and <a href="https://berkeleygraphics.com/typefaces/berkeley-mono/">Berkeley Mono</a>, and hosted on <a href="https://srht.site/">Sourcehut Pages</a>.</p>
+  <p>It is typeset in <a href="https://github.com/IBM/plex">IBM Plex Sans</a> and <a href="https://berkeleygraphics.com/typefaces/berkeley-mono/">Berkeley Mono</a>, and hosted on <a href="https://hetzner.com/">Hetzner</a>.</p>
   <p>Essential tools used in production include:</p>
   <ul>
     <li>HTML generation: <a href="https://www.jekyllrb.com/">Jekyll 4.3</a>, with <a href="https://github.com/jekyll/jekyll-feed">jekyll-feed</a> and <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
