feat(analytics): trialing Plausible analytics

--- a/colophon.html
+++ b/colophon.html
@@ -22,7 +22,9 @@ title: Colophon
 
 <section>
   <h3>Privacy statement</h3>
-  <p>This is a static website and does not use cookies nor tracks visitors in any way. No personal information is collected, except if you elect to subscribe to the email <a href="/the-long-term">newsletter</a>.</p>
+  <p>This is a static website and does not use cookies.</p>
+  <p>I use <a href="https://plausible.io">Plausible</a>, a privacy-focused analytics tool, to collect limited non-personally identifiable stats on visitors. Please see <a href="https://plausible.io/data-policy">their data policy</a>.</p>
+  <p>I also use <a href="https://buttondown.email">Buttondown</a> as my newsletter provider, and if you decide to subscribe to The Long Term, your email address will be stored with them. Please see <a href="https://buttondown.email/legal/privacy">their privacy policy</a>.</p>
 </section>
 
 <section>
