feat(front): Update front page photos

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@ layout: base
   </header>
 </section>
 <div class="full-width-photos">
-  <div class="photo">
-    <img src="/assets/images/home_ntc_1.jpg" alt="New Taipei City: plastic crates stacked on a street corner (2023)" title="Untitled (New Taipei City) (2023)">
-  </div>
-  <div class="photo">
-    <img src="/assets/images/home_ntc_2.jpg" alt="New Taipei City: a stop/go signal by the entrance to an underground car park near a 7-Eleven store (2023)" title="Untitled (New Taipei City) (2023)">
-  </div>
+  <figure class="photo">
+    <img src="/assets/images/home_family_3.jpg" alt="Ajaccio, Corsica: a child sits on a sofa, bathed in a golden light, facing away from the camera (2023)" title="Untitled (Ajaccio) (2023)">
+    <figcaption>Untitled (Ajaccio), 2023</figcaption>
+  </figure>
+  <figure class="photo">
+    <img src="/assets/images/home_family_2.jpg" alt="New Taipei City: plastic crates stacked on a street corner (2023)" title="Untitled (New Taipei City) (2023)">
+    <figcaption>Untitled (New Taipei City), 2023</figcaption>
+  </figure>
 </div>
 <section>
-  <p>From a yet-untitled ongoing project documenting family life. New Taipei City, Taiwan, 2023.</p>
+  <p>The photos above are from a yet-untitled ongoing project documenting family life. If you're curious about this project's development, please consider subscribing to <a href="/the-long-term">The Long Term</a>, which will document it.</p>
 </section>
