chore(newsletter): remove links
I'm shelving the newsletter until a better time, and removing it from
the website's navigation. The page itself remains, though, in case I
want to revisit this.

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@ layout: base
   </figure>
 </div>
 <section>
-  <p>The photos above are from a yet-untitled ongoing project documenting family life. If you're curious about this project's development, please consider subscribing to <a href="/the-long-term">The Long Term</a>, which will document it.</p>
+  <p>The photos above are from a yet-untitled ongoing project documenting family life.</p>
 </section>
