chore: Sourcehut -> GitHub

--- a/colophon.html
+++ b/colophon.html
@@ -15,7 +15,7 @@ title: Colophon
     <li>HTML generation: <a href="https://www.jekyllrb.com/">Jekyll 4.3</a>, with <a href="https://github.com/jekyll/jekyll-feed">jekyll-feed</a> and <a href="https://github.com/vwochnik/jekyll-autoprefixer">jekyll-autoprefixer</a></li>
     <li>Code editing, task management, general purpose operating system: <a href="https://www.gnu.org/software/emacs/">Emacs</a></li>
     <li>Version control: <a href="https://git-scm.com/">Git</a> via <a href="https://magit.vc">Magit</a></li>
-    <li>Builds and automatic deployment: <a href="https://builds.sr.ht">builds.sr.ht</a></li>
+    <li>Builds and automatic deployment: <a href="https://docs.github.com/en/actions">GitHub Actions</a></li>
     <li>Hosting: <a href="https://openbsd.org" class="openbsd"><span class="open">Open</span><span class="bsd">BSD</span></a> 7.4/httpd at <a href="https://cloud.hetzner.com">Hetzner Cloud</a><br/></li>
   </ul>
   <p>The site uses icons from <a href="https://github.com/twitter/twemoji">Twemoji</a> by Twitter, via <a href="https://github.com/SebastianAigner/twemoji-amazing">twemoji-amazing</a>, and an RSS feed icon adapted from <a href="http://www.feedicons.com/">FeedIcons</a>.</p>
@@ -36,7 +36,7 @@ title: Colophon
   <h3>Build information</h3>
   <p>
     Last updated on {{ site.data.git.date | readableDate }}<br/>
-    <code><a href="https://git.sr.ht/~gosha/gosha.net/commit/{{ site.data.git.commitHash }}">{{ site.data.git.commitHash }}</a></code>
+    <code><a href="https://github.com/goshatch/gosha.net/commit/{{ site.data.git.commitHash }}">{{ site.data.git.commitHash }}</a></code>
     &rarr; {{ site.data.git.subject }}
   </p>
   <p>
