--- a/accessibility.html
+++ b/accessibility.html
@@ -4,54 +4,91 @@ title: Accessibility Statement
 ---
 
 <header>
-  <h1>Accessibility Statement for <span class="basic-information website-name">gosha.net</span></h1>
+  <h1>
+    Accessibility Statement for
+    <span class="basic-information website-name">gosha.net</span>
+  </h1>
 </header>
 
 <section>
   <p>
-	  This is an accessibility statement from <a href="/about">Gosha Tcherednitchenko</a>.
+    This is an accessibility statement from
+    <a href="/about">Gosha Tcherednitchenko</a>.
   </p>
   <h3>Measures to support accessibility</h3>
   <p>
-	  <span class="basic-information organization-name">Gosha Tcherednitchenko</span>
-	  takes the following measures to ensure accessibility of
-	  <span class="basic-information website-name">gosha.net</span>:
+    <span class="basic-information organization-name"
+      >Gosha Tcherednitchenko</span
+    >
+    takes the following measures to ensure accessibility of
+    <span class="basic-information website-name">gosha.net</span>:
   </p>
   <ul class="organizational-effort accessibility-measures">
-	  <li>Include accessibility as part of my mission statement.</li>
-	  <li>Include accessibility throughout my internal policies.</li>
-	  <li>Provide continual accessibility training for my staff.</li>
+    <li>Include accessibility as part of my mission statement.</li>
+    <li>Include accessibility throughout my internal policies.</li>
+    <li>Provide continual accessibility training for my staff.</li>
   </ul>
   <h3>Conformance status</h3>
   <p>
-	  The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">Web Content Accessibility Guidelines (WCAG)</a> defines requirements for designers and developers to improve accessibility for people with disabilities. It defines three levels of conformance: Level A, Level AA, and Level AAA.
-	  <span class="basic-information website-name">gosha.net</span>
-	  is
-	  <span class="basic-information conformance-status" data-printfilter="lowercase">partially conformant</span>
-	  with
-	  <span class="basic-information conformance-standard"><span data-negate="">WCAG 2.1 level AA</span>.</span>
-	  <span>
-	    <span class="basic-information conformance-status">Partially conformant</span>
-	    means that
-	    <span class="basic-information conformance-meaning">some parts of the content do not fully conform to the accessibility standard</span>.
+    The
+    <a href="https://www.w3.org/WAI/standards-guidelines/wcag/"
+      >Web Content Accessibility Guidelines (WCAG)</a
+    >
+    defines requirements for designers and developers to improve accessibility
+    for people with disabilities. It defines three levels of conformance: Level
+    A, Level AA, and Level AAA.
+    <span class="basic-information website-name">gosha.net</span>
+    is
+    <span
+      class="basic-information conformance-status"
+      data-printfilter="lowercase"
+      >partially conformant</span
+    >
+    with
+    <span class="basic-information conformance-standard"
+      ><span data-negate="">WCAG 2.1 level AA</span>.</span
+    >
+    <span>
+      <span class="basic-information conformance-status"
+        >Partially conformant</span
+      >
+      means that
+      <span class="basic-information conformance-meaning"
+        >some parts of the content do not fully conform to the accessibility
+        standard</span
+      >.
     </span>
   </p>
   <h4>Additional accessibility considerations</h4>
-  <p class="basic-information conformance-additions">Current status: project gallery pages are not currently meeting the WCAG 2.1 level AA standard, as most images are lacking descriptive text. This is being worked on.</p>
+  <p class="basic-information conformance-additions">
+    Current status: project gallery pages are not currently meeting the WCAG 2.1
+    level AA standard, as most images are lacking descriptive text. This is
+    being worked on.
+  </p>
   <h3>Feedback</h3>
   <p>
-	  I welcome all feedback on the accessibility of
-	  <span class="basic-information website-name">gosha.net</span>.
-	  Please let me know if you encounter accessibility barriers by <a class="email u-email" href="mailto:mail@gosha.net?subject=Accessibility">emailing me</a> or reaching out <a href="https://merveilles.town/@gosha">on Mastodon</a>.
+    I welcome all feedback on the accessibility of
+    <span class="basic-information website-name">gosha.net</span>. Please let me
+    know if you encounter accessibility barriers by
+    <a class="email u-email" href="mailto:mail@gosha.net?subject=Accessibility"
+      >emailing me</a
+    >
+    or reaching out <a href="https://merveilles.town/@gosha">on Mastodon</a>.
   </p>
   <p>
-	  I will try to respond to feedback within <span class="feedback responsetime">one week</span>.
+    I will try to respond to feedback within
+    <span class="feedback responsetime">one week</span>.
   </p>
-  <hr noshade="noshade">
+  <hr />
   <h3>Date</h3>
   <p>
-	  This statement was created on
-	  <span class="basic-information statement-created-date">11 November 2023</span>
-	  using the <a href="https://www.w3.org/WAI/planning/statements/">W3C Accessibility Statement Generator Tool</a>.
+    This statement was created on
+    <span class="basic-information statement-created-date"
+      >11 November 2023</span
+    >
+    using the
+    <a href="https://www.w3.org/WAI/planning/statements/"
+      >W3C Accessibility Statement Generator Tool</a
+    >.
   </p>
 </section>
