feat(navigation): add logo

--- a/colophon.html
+++ b/colophon.html
@@ -11,7 +11,7 @@ title: Colophon
   <p>
     <code>gosha.net</code> is designed, written, and produced by
     <a href="/about" rel="author">Gosha Tcherednitchenko</a>, with illustrations
-    by T.L.
+    by T.L. and Darius Dan.
   </p>
   <p>
     Typeset in <a href="https://github.com/IBM/plex">IBM Plex Sans</a> and
