--- a/colophon.html
+++ b/colophon.html
@@ -76,15 +76,16 @@ title: Colophon
 
 <section>
   <h3>Build information</h3>
+  {%- assign commit = site.data.git -%}
   <p>
-    Last updated on {{ site.data.git.date | readableDate }}<br />
+    Last updated on {{ commit.date | readableDate }}<br />
     <code
       ><a
-        href="https://github.com/goshatch/gosha.net/commit/{{ site.data.git.commitHash }}"
-        >{{ site.data.git.commitHash }}</a
+        href="https://github.com/goshatch/gosha.net/commit/{{ commit.hash }}"
+        >{{ commit.hash }}</a
       ></code
     >
-    &rarr; {{ site.data.git.subject }}
+    &rarr; {{ commit.subject }}
   </p>
   <p>
     Made with <i class="twa twa-red-heart"></i> in London
