--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ title: About
     Social: <a rel="me" href="https://merveilles.town/@gosha">Mastodon</a>,
     <a rel="me" href="https://bsky.app/profile/gosha.net">Bluesky</a>,
     <a href="https://github.com/goshatch">GitHub</a>,
-    <a href="https://read.cv/gosha">CV</a>.
+    <a href="https://linkedin.com/in/goshatch">LinkedIn</a>.
   </p>
 </section>
 <section>
