feat(colophon): deprecate github actions

--- a/colophon.html
+++ b/colophon.html
@@ -38,7 +38,8 @@ title: Colophon
     </li>
     <li>
       Builds and automatic deployment:
-      <a href="https://docs.github.com/en/actions">GitHub Actions</a>
+    <del>GitHub Actions</del>
+    <code><a href="/2025/out-with-ci-in-with-a-makefile/">make yeet</a></code>
     </li>
     <li>
       Hosting:
