feat(hire): add Hire Gosha! page

--- a/index.html
+++ b/index.html
@@ -2,21 +2,38 @@
 active: home
 layout: base
 ---
+
 <section>
   <header class="home-header">
-    <p>Hello! I'm <a href="/about">Gosha Tcherednitchenko</a>, a Russian-born, French-raised photographer, designer, and programmer, living and <a href="/projects">working</a> in London, UK.</p>
+    <p>
+      Hello! I’m <a href="/about">Gosha Tcherednitchenko</a>, a Russian-born,
+      French-raised photographer, designer, and programmer, living and
+      <a href="/projects">working</a> in London, UK.
+    </p>
+    <p>I am currently <a href="/hire">available for work</a>.</p>
   </header>
 </section>
 <div class="full-width-photos">
   <figure class="photo">
-    <img src="/assets/images/home_family_3.jpg" alt="Ajaccio, Corsica: a child sits on a sofa, bathed in a golden light, facing away from the camera (2023)" title="Untitled (Ajaccio) (2023)">
+    <img
+      src="/assets/images/home_family_3.jpg"
+      alt="Ajaccio, Corsica: a child sits on a sofa, bathed in a golden light, facing away from the camera (2023)"
+      title="Untitled (Ajaccio) (2023)"
+    />
     <figcaption>Untitled (Ajaccio), 2023</figcaption>
   </figure>
   <figure class="photo">
-    <img src="/assets/images/home_family_2.jpg" alt="New Taipei City: plastic crates stacked on a street corner (2023)" title="Untitled (New Taipei City) (2023)">
+    <img
+      src="/assets/images/home_family_2.jpg"
+      alt="New Taipei City: plastic crates stacked on a street corner (2023)"
+      title="Untitled (New Taipei City) (2023)"
+    />
     <figcaption>Untitled (New Taipei City), 2023</figcaption>
   </figure>
 </div>
 <section>
-  <p>The photos above are from a yet-untitled ongoing project documenting family life.</p>
+  <p>
+    The photos above are from a yet-untitled ongoing project documenting family
+    life.
+  </p>
 </section>
